# NerdSLAM

./: CMakeLists.txt  README.md
shaders/: kinect_frame_2d.vert  kinect_frame_rgb.frag
src/: CMakeLists.txt
src/NerdSLAM/: lua_config.cc  lua_config.h
src/NerdSLAM/core/: convert_to_pcl.cc  convert_to_pcl.h  opengl_object.cc  opengl_object.h  opengl_window.cc  opengl_window.h
src/NerdSLAM/exception/: nerdslam_exception.h
src/NerdSLAM/kinect/: kinect_2d_display.cc  kinect_2d_display.h  kinect_2d_display_main.cc  kinect_display.h  kinect_display_2d.cc  kinect_display_window.cc  kinect_display_window.h  kinect_frame.cc  kinect_frame.h  kinect_reader.h  kinect_reader_v2.cc  kinect_reader_v2.h  kinect_v2_console_logger.cc  kinect_v2_console_logger.h  kinect_v2_file_logger.cc  kinect_v2_file_logger.h  load_shaders.cc  load_shaders.h
src/NerdSLAM/kinect/v1/: kinect_device.cc  kinect_device.h  kinect_display.cc  kinect_display_window.cc  kinect_display_window.h  kinect_reader_v1.cc  kinect_reader_v1.h
src/NerdSLAM/kinect/v2/: kinect_console_logger.cc  kinect_console_logger.h  kinect_display.cc  kinect_display_window.cc  kinect_display_window.h  kinect_file_logger.cc  kinect_file_logger.h  kinect_reader_v2.cc  kinect_reader_v2.h
src/NerdSLAM/proto/: nerdslam.proto
test/: CMakeLists.txt  test_lua_config.cc
test/kinect/: test_kinect_reader_v2.cc
